Fix h2 overlap

--- a/modules/views/panels/styles/main.styl
+++ b/modules/views/panels/styles/main.styl
@@ -1,7 +1,7 @@
 article
 	h2
 		text-align center
-		margin-top 30px
+		margin 30px 15%
 
 		i.print
 			font-size 0.7em
